# rpm-version

./: .clang-tidy  .editorconfig  README.md  meson.build  meson_options.txt
.github/workflows/: macos.yml  ubuntu.yml
cmake/: CMakeLists.txt
include/rpm-version/: version.h  version.hpp
src/: capi.cpp  private.hpp  version.cpp
tests/: c_api_test.c  meson.build  version_test.cpp
