# SPDX-license-identifier: Apache-2.0 OR GPL-2.0
# Copyright © 2022 Intel Corporation

option(
  'tests',
  type : 'feature',
  description : 'Whether to enable tests or not',
)
option(
  'c-bindings',
  type : 'boolean',
  value : true,
  description : 'whether to build and install C bindings.',
)
